# step-functions-strands-demo

./: LICENSE  Makefile  README.md  app.py  cdk.json  pyproject.toml
blog/: article.md
cdk/stacks/: document_analysis_stack.py
src/agents/: __init__.py  compliance_checker.py  contract_analyzer.py
src/lambdas/agent_executor/: handler.py  requirements.txt
src/lambdas/aggregator/: handler.py  requirements.txt
src/lambdas/chunker/: handler.py
src/lambdas/reporter/: handler.py  requirements.txt
src/models/: __init__.py  schemas.py
tests/: conftest.py  test_agents.py  test_lambdas.py
